--- a/TODO.org
+++ b/TODO.org
@@ -11,6 +11,6 @@
     des wrappers vers une seule fonction qui n'utilise pas
     D mais une matrice s a s' a' ploup. 
 *** TODO Trouver et détruire la fuite de mémoire
-*** TODO Normer Theta
-*** TODO Utiliser une seule banque de données
+*** DONE Normer Theta
+*** DONE Utiliser une seule banque de données
 
